Fixed spacing again

--- a/HomePage/style.css
+++ b/HomePage/style.css
@@ -11,11 +11,6 @@ html {
 #albumSection {
     width: 100%;
     background-color: lightgoldenrodyellow;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    gap: 1.5rem;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     padding-bottom: 13vh; /* Offset the footer */
@@ -26,6 +21,14 @@ html {
     font-size: 5rem;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: rgb(69, 69, 69);
+}
+
+#album, #albumSection {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    gap: 1.5rem;
 }
 
 .imageCaption {
